--- a/siteFiles/css/timeManagment.css
+++ b/siteFiles/css/timeManagment.css
@@ -19,7 +19,7 @@
   border-style: double;
   font-size:xx-large;
   border-radius: 2rem;
-  padding: 20px;
+  padding: 10px;
 }
 
 .timeManagmentDescription {
